--- a/hewwwe/back/Hewwwe/src/main/resources/application.properties
+++ b/hewwwe/back/Hewwwe/src/main/resources/application.properties
@@ -1,5 +1,38 @@
 spring.application.name=Hewwwe
+
+# Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/hewwwe
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Data Initialization
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+# Server Configuration
+server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# Security Configuration
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+# Swagger Configuration
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+
+# Logging Configuration
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
