--- a/hewwwe/front/hewwwe/package.json
+++ b/hewwwe/front/hewwwe/package.json
@@ -10,19 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/vite": "^4.0.17",
+    "@fontsource/domine": "^5.2.5",
+    "@fontsource/nunito": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.1",
+    "@types/gsap": "^1.20.2",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-stars": "^2.2.4",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.8.4",
-    "postcss": "^8.5.3",
+    "framer-motion": "^12.6.3",
+    "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
-    "react-stars": "^2.2.5",
-    "tailwindcss": "^4.0.17"
+    "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -33,7 +31,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "json-server": "^1.0.0-beta.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
