--- a/hewwwe/front/hewwwe/package.json
+++ b/hewwwe/front/hewwwe/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@fontsource/domine": "^5.2.5",
     "@fontsource/nunito": "^5.2.5",
-    "@tailwindcss/vite": "^4.1.1",
-    "@types/gsap": "^1.20.2",
-    "@types/react-router-dom": "^5.3.3",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.1.2",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
-    "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.4.1",
     "react-router-dom": "^7.4.1",
-    "tailwindcss": "^4.1.1"
+    "tailwindcss": "^4.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
