--- a/hewwwe/back/Hewwwe/pom.xml
+++ b/hewwwe/back/Hewwwe/pom.xml
@@ -57,6 +57,12 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>3.4.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.4</version>
+		</dependency>
 
 		<!-- MySQL Connector -->
 		<dependency>
