--- a/hewwwe/back/Hewwwe/src/main/resources/application.properties
+++ b/hewwwe/back/Hewwwe/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Data Initialization
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+server.port=8080
